<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.puppetlabs</groupId>
    <artifactId>gatling_scratch</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>${project.artifactId}</name>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <scala.version>2.9.2</scala.version>
    </properties>

    <repositories>
        <repository>
            <id>excilys</id>
            <name>Excilys Repository</name>
            <url>http://repository.excilys.com/content/groups/public</url>
        </repository>
        <repository>
            <id>clojars.org</id>
            <url>http://clojars.org/repo</url>
        </repository>
        <!--
        <repository>
          <id>scala-tools.org</id>
          <name>Scala-Tools Maven2 Repository</name>
          <url>http://scala-tools.org/repo-releases</url>
        </repository>
        -->
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>excilys</id>
            <name>Excilys Repository</name>
            <url>http://repository.excilys.com/content/groups/public</url>
        </pluginRepository>
    </pluginRepositories>

    <!--
    <pluginRepositories>
      <pluginRepository>
        <id>scala-tools.org</id>
        <name>Scala-Tools Maven2 Repository</name>
        <url>http://scala-tools.org/repo-releases</url>
      </pluginRepository>
    </pluginRepositories>
    -->
    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-compiler</artifactId>
            <version>${scala.version}</version>
        </dependency>

        <dependency>
            <groupId>com.excilys.ebi.gatling</groupId>
            <artifactId>gatling-recorder</artifactId>
            <version>1.4.2</version>
            <exclusions>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>scala-compiler</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.excilys.ebi.gatling</groupId>
            <artifactId>gatling-app</artifactId>
            <version>1.4.2</version>
        </dependency>

        <dependency>
            <groupId>com.excilys.ebi.gatling.highcharts</groupId>
            <artifactId>gatling-charts-highcharts</artifactId>
            <version>1.4.2</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>8.1.9.v20130131</version>
        </dependency>

        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>clojure</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-core</artifactId>
            <version>1.1.8</version>
        </dependency>
        <dependency>
            <groupId>ring</groupId>
            <artifactId>ring-jetty-adapter</artifactId>
            <version>1.1.8</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>org.scala-tools.testing</groupId>-->
        <!--<artifactId>specs_2.10</artifactId>-->
        <!--<version>1.6.5</version>-->
        <!--<scope>test</scope>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.10</artifactId>
            <version>1.9.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!--<sourceDirectory>src/main/scala</sourceDirectory>-->
        <!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
        <plugins>
            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <args>
                                <arg>-make:transitive</arg>
                                <arg>-dependencyfile</arg>
                                <arg>${project.build.directory}/.scala_dependencies</arg>
                            </args>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.theoryinpractise</groupId>
                <artifactId>clojure-maven-plugin</artifactId>
                <version>1.3.13</version>
                <extensions>true</extensions>
                <configuration>
                    <sourceDirectories>
                        <sourceDirectory>src/main/clojure</sourceDirectory>
                    </sourceDirectories>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-surefire-plugin</artifactId>-->
                <!--<version>2.6</version>-->
                <!--<configuration>-->
                    <!--<useFile>false</useFile>-->
                    <!--<disableXmlReport>true</disableXmlReport>-->
                    <!--&lt;!&ndash; If you have classpath issue like NoDefClassError,... &ndash;&gt;-->
                    <!--&lt;!&ndash; useManifestOnlyJar>false</useManifestOnlyJar &ndash;&gt;-->
                    <!--<includes>-->
                        <!--<include>**/*Test.*</include>-->
                        <!--<include>**/*Suite.*</include>-->
                    <!--</includes>-->
                <!--</configuration>-->
            <!--</plugin>-->

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.3</version>
                <configuration>
                    <extraJvmArguments>-server -XX:+UseThreadPriorities -XX:ThreadPriorityPolicy=42 -Xms512M -Xmx512M -Xmn100M -Xss2M -XX:+HeapDumpOnOutOfMemoryError -XX:+AggressiveOpts -XX:+OptimizeStringConcat -XX:+UseFastAccessorMethods -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+CMSClassUnloadingEnabled -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=1 -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly</extraJvmArguments>
                    <binFileExtensions>
                        <unix>.sh</unix>
                    </binFileExtensions>
                    <programs>
                        <program>
                            <mainClass>com.excilys.ebi.gatling.recorder.GatlingRecorder</mainClass>
                            <name>gatling-recorder</name>
                        </program>
                        <program>
                            <mainClass>com.excilys.ebi.gatling.app.Gatling</mainClass>
                            <name>gatling</name>
                        </program>
                        <program>
                            <mainClass>com.puppetlabs.http.server.JettyHelloWorldServer</mainClass>
                            <name>jetty-hello-world</name>
                        </program>
                        <program>
                            <name>ring-hello-world</name>
                            <mainClass>com.puppetlabs.http.server.ring</mainClass>
                        </program>
                    </programs>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble</id>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>com.excilys.ebi.gatling</groupId>
                    <artifactId>gatling-maven-plugin</artifactId>
                    <version>1.4.2</version>
                    <configuration>
                        <requestBodiesFolder>src/test/resources/gatling/simulation/puppet/master</requestBodiesFolder>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
